--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
 
     <application
-        android:label="journal_app"
+        android:label="DiaryBytes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
